--- a/index.html
+++ b/index.html
@@ -12,32 +12,150 @@
 	<script type="text/javascript" src = "js/bootstrap.min.js"></script>
 	<!-- wr css (for responsive sidebar) -->
 	<link rel="stylesheet" type="text/css" href="css/w3.css">
+	<!-- font awesome icons -->	
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+	<!-- custom css -->
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
 
 </head>
 <body>
 
-	<!-- sidebar container -->
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
-  <h3 class="w3-bar-item">Menu</h3>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+
+
+<div class="sidenav">
+<h1 class="text-center" style="font-weight:bold;">LOGO</h1>
+
+<h4 class="text-center" style="color:white;font-weight:bold;margin-top:30%">CONTENTS</h4>
+<ul>
+	<h5 style="color:white;font-weight:bold">HISTORY</h5>
+	<h5 style="color:white;font-weight:bold">CIVICS</h5>
+	<h6 style="color:white;font-weight:bold">Ch 01: What Is Democracy? Why Democracy?</h6>
+	<ul>
+		<li style="list-style:none;color:white;">1.1 Meaning Of Democracy</li>
+		<li style="list-style:none;color:white;">1.2 Features Of Democracy</li>	
+		<ul>
+			<li style="list-style:none;color:white">Case studies of few countries</li>
+			<li style="color:white">Pakistan</li>
+			<li style="color:white">China</li>
+			<li style="color:white">Mexico</li>
+			<li style="color:white">Saudi Arabia, Estonia, Fiji</li>
+			<li style="color:white">Zimbabwe</li>
+		</ul>
+	</ul>
+<h6 style="color:white;font-weight:bold">Ch 02: Constitutional Design</h6>
+<h6 style="color:white;font-weight:bold">Ch 03: Electoral Politics</h6>
+<h6 style="color:white;font-weight:bold">Ch 04: Working Of Institutions</h6>
+<h6 style="color:white;font-weight:bold">Ch 05: Democratic Rights</h6>
+<h5 style="color:white;font-weight:bold">GEOGRAPHY</h5>
+<h5 style="color:white;font-weight:bold">ECONOMICS</h5>
+</ul>
+
+
+</div>
+
+<div class="main">
+<div class="row float-right">
+		<div>
+			GRADE 10
+		</div>
+		<div class="col">
+			Social Studies
+			<i class="fas fa-arrow-alt-circle-down"></i>
+
+		</div>
+	</div><br><br>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
+        <a class="nav-link" href="#">NOTES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">LAQ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">SAQ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">VSAQ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">VBQ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">NCERT QUESTIONS</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container" style="margin-left:100px">
+	<h3 style="font-weight:bold">Ch 01: What Is Democarcy? Why Democracy?</h3>
+	<ul>
+	<p>1.1 Meaning Of Democarcy</p>
+	<li>Rulers are elected by the people to make major decisions</li>
+	<li>Though elections, a fair and choice of oppurtunity is given to people to change their current ruler</li>
+	<li>This choice and oppurtunity is available to all the poeple on an equal basis.</li>
+	<li>The exercise of this choice leads to the formation of the governement, limited by basic rules of the constitution and citizen's rights</li>
+	<li>Different decisions of the government are taken in an open manner, debate in media, invitation to expert's opinion, representations by the common man form a part of decision making process.</li>	
+	<li>Citizens have the right to oppose any government policy or activity</li>
+	</ul>
+	
 </div>
 
 
 
+</div>
+     
+</body>
+</html> 
 
-	<!-- body container -->
-	<div class="col-sm-12">
-		<div class="row float-right" style="margin-right:5%">
-			<div>
-				<h4>Grade 10</h4>
-			</div>
-			<div class="col">
-				<h4>Social Studies</h4>
-			</div>
-		</div>
-	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
