--- a/index.html
+++ b/index.html
@@ -27,33 +27,22 @@
 
 <h4 class="text-center" style="color:white;font-weight:bold;margin-top:30%">CONTENTS</h4>
 <ul>
-	<h5 style="color:white;font-weight:bold">HISTORY</h5>
-	<h5 style="color:white;font-weight:bold">CIVICS</h5>
-	<h6 style="color:white;font-weight:bold">Ch 01: What Is Democracy? Why Democracy?</h6>
-	<ul>
-		<li style="list-style:none;color:white;">1.1 Meaning Of Democracy</li>
-		<li style="list-style:none;color:white;">1.2 Features Of Democracy</li>	
-		<ul>
-			<li style="list-style:none;color:white">Case studies of few countries</li>
-			<li style="color:white">Pakistan</li>
-			<li style="color:white">China</li>
-			<li style="color:white">Mexico</li>
-			<li style="color:white">Saudi Arabia, Estonia, Fiji</li>
-			<li style="color:white">Zimbabwe</li>
-		</ul>
-	</ul>
-<h6 style="color:white;font-weight:bold">Ch 02: Constitutional Design</h6>
-<h6 style="color:white;font-weight:bold">Ch 03: Electoral Politics</h6>
-<h6 style="color:white;font-weight:bold">Ch 04: Working Of Institutions</h6>
-<h6 style="color:white;font-weight:bold">Ch 05: Democratic Rights</h6>
-<h5 style="color:white;font-weight:bold">GEOGRAPHY</h5>
-<h5 style="color:white;font-weight:bold">ECONOMICS</h5>
+	
+<h5 style="color:white;font-weight:bold" id="subjects"></h5>
+<ul>
+	<p id="subSubjects"></p>
+</ul>
+
+
+
+
 </ul>
 
 
 </div>
 
 <div class="main">
+	<div style="width:100%;background-color:#1B3B50;color:white">
 <div class="row float-right">
 		<div>
 			GRADE 10
@@ -64,7 +53,7 @@
 
 		</div>
 	</div><br><br>
-
+</div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   
@@ -78,19 +67,16 @@
         <a class="nav-link" href="#">NOTES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">LAQ</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">SAQ</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">VSAQ</a>
+        <a class="nav-link" href="#">CONTENT</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">VBQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">NCERT QUESTIONS</a>
+        <a class="nav-link" href="#">NCERT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">EXTRA</a>
       </li>
     </ul>
   </div>
@@ -113,6 +99,8 @@
 
 
 </div>
+
+<script type="text/javascript" src="js/jsonParser.js"></script>
      
 </body>
 </html> 
@@ -130,6 +118,29 @@
 
 
 
+<!-- 
+
+<h5 style="color:white;font-weight:bold">HISTORY</h5>
+	<h5 style="color:white;font-weight:bold">CIVICS</h5>
+	<h6 style="color:white;font-weight:bold">Ch 01: What Is Democracy? Why Democracy?</h6>
+	<ul>
+		<li style="list-style:none;color:white;">1.1 Meaning Of Democracy</li>
+		<li style="list-style:none;color:white;">1.2 Features Of Democracy</li>	
+		<ul>
+			<li style="list-style:none;color:white">Case studies of few countries</li>
+			<li style="color:white">Pakistan</li>
+			<li style="color:white">China</li>
+			<li style="color:white">Mexico</li>
+			<li style="color:white">Saudi Arabia, Estonia, Fiji</li>
+			<li style="color:white">Zimbabwe</li>
+		</ul>
+	</ul>
+<h6 style="color:white;font-weight:bold">Ch 02: Constitutional Design</h6>
+<h6 style="color:white;font-weight:bold">Ch 03: Electoral Politics</h6>
+<h6 style="color:white;font-weight:bold">Ch 04: Working Of Institutions</h6>
+<h6 style="color:white;font-weight:bold">Ch 05: Democratic Rights</h6>
+<h5 style="color:white;font-weight:bold">GEOGRAPHY</h5>
+<h5 style="color:white;font-weight:bold">ECONOMICS</h5>-->
 
 
 
@@ -151,11 +162,3 @@
 
 
 
-
-
-
-
-
-
-</body>
-</html>
