--- a/Electric_Field.html
+++ b/Electric_Field.html
@@ -63,7 +63,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" onclick="redirectFunctionNotes()">NOTES</a>
+                    <a class="nav-link" onclick="redirectFunctionNotes()" href="#">NOTES</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" onclick="redirectFunctionContent()" href="#">CONTENT</a>
@@ -82,42 +82,18 @@
     </nav>
 
     <div class="container">
-
-
+        <p id="electricField"></p>
     </div>
 
 
 </div>
 
+<script type="text/javascript" src="js/jsonParserNotes.js"></script>
 <script type="text/javascript" src="js/jsonParserRoot.js"></script>
 
 </body>
 </html>
 
-
-<!-- 
-
-<h5 style="color:white;font-weight:bold">HISTORY</h5>
-	<h5 style="color:white;font-weight:bold">CIVICS</h5>
-	<h6 style="color:white;font-weight:bold">Ch 01: What Is Democracy? Why Democracy?</h6>
-	<ul>
-		<li style="list-style:none;color:white;">1.1 Meaning Of Democracy</li>
-		<li style="list-style:none;color:white;">1.2 Features Of Democracy</li>	
-		<ul>
-			<li style="list-style:none;color:white">Case studies of few countries</li>
-			<li style="color:white">Pakistan</li>
-			<li style="color:white">China</li>
-			<li style="color:white">Mexico</li>
-			<li style="color:white">Saudi Arabia, Estonia, Fiji</li>
-			<li style="color:white">Zimbabwe</li>
-		</ul>
-	</ul>
-<h6 style="color:white;font-weight:bold">Ch 02: Constitutional Design</h6>
-<h6 style="color:white;font-weight:bold">Ch 03: Electoral Politics</h6>
-<h6 style="color:white;font-weight:bold">Ch 04: Working Of Institutions</h6>
-<h6 style="color:white;font-weight:bold">Ch 05: Democratic Rights</h6>
-<h5 style="color:white;font-weight:bold">GEOGRAPHY</h5>
-<h5 style="color:white;font-weight:bold">ECONOMICS</h5>-->
 
 
 
