--- a/Development.html
+++ b/Development.html
@@ -88,7 +88,7 @@
 
 </div>
 
-<script type="text/javascript" src="js/jsonParserDevelop.js"></script>
+<script type="text/javascript" src="js/jsonParserNotes.js"></script>
 <script type="text/javascript" src="js/jsonParserRoot.js"></script>
 
 </body>
