--- a/The_Story_of_Village_Palampur.html
+++ b/The_Story_of_Village_Palampur.html
@@ -88,8 +88,8 @@
 
 </div>
 
+<script type="text/javascript" src="js/jsonParserNotes.js"></script>
 <script type="text/javascript" src="js/jsonParserRoot.js"></script>
-<script type="text/javascript" src="js/jsonParserPalampur.js"></script>
 
 </body>
 </html>
