--- a/What_is_democracy_Why_democracy_.html
+++ b/What_is_democracy_Why_democracy_.html
@@ -89,7 +89,7 @@
 </div>
 
 <script type="text/javascript" src="js/jsonParserRoot.js"></script>
-<script type="text/javascript" src="js/jsonParserDemocracy.js"></script>
+<script type="text/javascript" src="js/jsonParserNotes.js"></script>
 
 </body>
 </html>
