--- a/Electric_Field.htmlvbq.html
+++ b/Electric_Field.htmlvbq.html
@@ -69,7 +69,7 @@
                     <a class="nav-link" onclick="redirectFunctionContent()" href="#">CONTENT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" onclick="redirectFunctionVbq()" href="#">VBQ</a>
+                    <a class="nav-link" href="#">VBQ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">NCERT</a>
@@ -81,14 +81,14 @@
         </div>
     </nav>
 
-    <div class="container">
-        <p id="electricField"></p>
+    <div class="container jumbotron">
+        <p id="electricFieldVbq"></p>
     </div>
 
 
 </div>
 
-<script type="text/javascript" src="js/jsonParserNotes.js"></script>
+
 <script type="text/javascript" src="js/jsonParserRoot.js"></script>
 <script type="text/javascript" src="js/jsonParserVbq.js"></script>
 
