--- a/French_Revolution.html
+++ b/French_Revolution.html
@@ -88,8 +88,8 @@
 
     </div>
 
+    <script type="text/javascript" src="js/jsonParserNotes.js"></script>
     <script type="text/javascript" src="js/jsonParserRoot.js"></script>
-    <script type="text/javascript" src="js/jsonParserFrench.js"></script>
 
     </body>
     </html>
